<resources>
    <string name="app_name">Bug Squash</string>
    <string name="welcomeMessageText">Welcome to Bug Squash!</string>
    <string name="playButtonText">Play</string>
    <string name="settingsButtonText">Settings</string>
    <string name="settingsFragmentTitle">Settings</string>
    <string name="configFragmentTitle">Select Difficulty</string>
    <string name="gameFragmentTitle">Bug Squash!</string>
    <string name="resultsFragmentTitle">Game Over!</string>
    <string name="configPlayButtonText">Lets Go!</string>
    <string name="settingsBack">back</string>
    <string name="gameOverText">Game Over</string>
    <string name="backToTitle">New Game</string>
    <string name="lightMode">Light Mode</string>
    <string name="darkMode">Dark Mode</string>
    <string name="difficultyEasy">Difficulty: Easy</string>
    <string name="difficultyNormal">Difficulty: Normal</string>
    <string name="difficultyHard">Difficulty: Hard</string>
    <string name="gameDifficulty"></string>
    <string name="squashed">You Squashed</string>
    <string name="bugs">Bugs!</string>
    <string name="bugSwitchText">Other Bug</string>
</resources>