<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/resultsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultsFragmentTitle"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <TextView
            android:id="@+id/resultsScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/backToTitleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultsHeader" />

        <Button
            android:id="@+id/backToTitleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultsHeader"
            app:layout_constraintVertical_bias="0.92" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squashed"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/resultsScoreTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultsHeader"
            app:layout_constraintVertical_bias="0.85" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bugs"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/backToTitleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultsScoreTextView"
            app:layout_constraintVertical_bias="0.16000003" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>